# bids_workshop

./: .gitignore  MoBIDS_handson_1_xdf2bids.m  MoBIDS_handson_2_touchup.m  README.md  handson_pyParticipants2Bids.py  pyEeg2Bids.py  pyproject.toml
