[tool.poetry]
name = "bids-workshop"
version = "0.1.0"
description = ""
authors = ["Julius Welzel <julius.welzel@gmail.com>"]
license = "OSF"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
mne = "^1.7.0"
mnelab = "^0.9.1"
pyxdf = "^1.16.6"
mne-bids = "^0.14"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
